tests/snapshots/list_refresh__stale_account.snap
---
source: tests/list_refresh.rs
assertion_line: 490
expression: "account(&payload, 1)"
---
{
  "active": false,
  "alias": "one",
  "autoIgnite": false,
  "backoffUntil": "[backoff-until]",
  "disabled": false,
  "email": "one@example.com",
  "lastError": "http-500",
  "lastGood": {
    "ageSeconds": "[age]",
    "fetchedAt": "[fetched-at]",
    "windows": [
      {
        "kind": "5h",
        "pct": 42.0,
        "resetsAt": "2026-09-09T05:59:59Z"
      }
    ]
  },
  "organizationName": "Org One",
  "organizationUuid": "org-1",
  "preferred": false,
  "slot": 1,
  "usageStatus": "stale",
  "windows": []
}
